# nodo-documentos

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 4b29670cd67e_initial_migration.py  add_content_field_to_documents.py  e6dfb3372242_rename_clinic_id_to_clinic_name_and_add_.py  ee16b33c310a_initial_migration.py  f7a8b9c0d1e2_remove_unique_constraint_from_clinic_name.py  rename_clinical_history_access_logs_clinic_id_to_clinic_name.py
src/nodo_documentos/: app.py
src/nodo_documentos/api/: dependencies.py  middleware.py  router.py  schemas.py
src/nodo_documentos/api/routes/: chat.py  clinical_history.py  documents.py  mock_router.py
src/nodo_documentos/db/: models.py  session.py  settings.py
src/nodo_documentos/db/repos/: clinical_history_access.py  document.py  factory.py
src/nodo_documentos/rag/chunking/: __init__.py  chunker.py  models.py
src/nodo_documentos/services/: authorization_service.py  chat_service.py  clinical_history_access_service.py  document_service.py  factory.py  models.py  rag_service.py  settings.py
src/nodo_documentos/utils/: __init__.py  s3_utils.py  settings.py
tests/: conftest.py
tests/api/: test_api_key_middleware.py  test_chat_api.py  test_clinical_history_api.py  test_documents_api.py
tests/db/repos/: test_clinical_history_access_repository.py  test_document_repository.py
tests/integration/: test_chat_integration.py  test_server_integration.py
tests/services/: test_authorization_service.py  test_chat_service.py  test_clinical_history_access_service.py  test_document_service.py  test_rag_service.py
(+13 files in other folders)
