[project]
name = "nodo-documentos"
version = "0.1.0"
description = "Sistema de gestión de documentos"
readme = "README.md"
authors = [
    { name = "Joaquin Campos", email = "jcamponario@gmail.com" }
]
requires-python = ">=3.13.7"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.29.0",
    "boto3>=1.35.0",
    "fastapi>=0.120.0",
    "greenlet>=3.2.4",
    "httpx>=0.27.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.2.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/nodo_documentos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "E", "W", "ARG", "T201"]
fixable = ["I"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E712", "ARG001"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
